--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,7 +1,7 @@
 on: push
 name: Build and Deploy
 jobs:
-  buildAndTest:
+  build_and_test:
     name: Build and test
     runs-on: ubuntu-latest
     steps:
@@ -12,19 +12,18 @@ jobs:
         GO111MODULE: "on"
       with:
         args: go test -verbose -race -cover -covermode=atomic ./...
-    - name: 'Deploy filter: not a deleted branch'
-      uses: actions/bin/filter@master
-      with:
-        args: not deleted
-    - name: 'Deploy filter: master branch'
-      uses: actions/bin/filter@master
-      with:
-        args: branch master
+  deploy:
+    name: Deploy
+    runs-on: ubuntu-latest
+    needs: build_and_test
+    steps:
     - name: Authenticate to Google Cloud
+      if: github.ref == 'refs/heads/master' && !github.deleted
       uses: actions/gcloud/auth@master
       env:
         GCLOUD_AUTH: ${{ secrets.GCLOUD_AUTH }}
     - name: Deploy to Google Cloud Functions
+      if: github.ref == 'refs/heads/master' && !github.deleted
       uses: actions/gcloud/cli@master
       env:
         CF_NAME: ${{ secrets.CF_NAME }}
