--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -18,14 +18,14 @@ jobs:
     needs: build_and_test
     steps:
     - uses: actions/checkout@master
-      if: github.ref == 'refs/heads/master' && !github.deleted
+      if: github.ref == 'refs/heads/master' && !github.event.deleted
     - name: Authenticate to Google Cloud
-      if: github.ref == 'refs/heads/master' && !github.deleted
+      if: github.ref == 'refs/heads/master' && !github.event.deleted
       uses: actions/gcloud/auth@master
       env:
         GCLOUD_AUTH: ${{ secrets.GCLOUD_AUTH }}
     - name: Deploy to Google Cloud Functions
-      if: github.ref == 'refs/heads/master' && !github.deleted
+      if: github.ref == 'refs/heads/master' && !github.event.deleted
       uses: actions/gcloud/cli@master
       with:
         args: functions deploy ${{secrets.CF_NAME}} --project=${{secrets.CF_PROJECT}} --region=${{secrets.CF_REGION}}
