--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,33 +1,44 @@
 on: push
 name: Build and Deploy
 jobs:
+  check_not_deleted:
+    runs-on: ubuntu-latest
+    steps:
+    - name: If deleted
+      if: 'github.event.deleted'
+      run: exit
   build_and_test:
     name: Build and test
+    needs: check_not_deleted
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
-      if: '!github.event.deleted'
     - name: Build and test
-      if: '!github.event.deleted'
       uses: cedrickring/golang-action/go1.11@master
       env:
         GO111MODULE: "on"
       with:
         args: go test -verbose -race -cover -covermode=atomic ./...
+  check_master:
+    runs-on: ubuntu-latest
+    steps:
+    - name: If not master
+      if: github.ref != 'refs/heads/master'
+      run: exit
   deploy:
     name: Deploy
+    needs:
+    - check_not_deleted
+    - check_master
+    - build_and_test
     runs-on: ubuntu-latest
-    needs: build_and_test
     steps:
     - uses: actions/checkout@master
-      if: github.ref == 'refs/heads/master' && !github.event.deleted
     - name: Authenticate to Google Cloud
-      if: github.ref == 'refs/heads/master' && !github.event.deleted
       uses: actions/gcloud/auth@master
       env:
         GCLOUD_AUTH: ${{ secrets.GCLOUD_AUTH }}
     - name: Deploy to Google Cloud Functions
-      if: github.ref == 'refs/heads/master' && !github.event.deleted
       uses: actions/gcloud/cli@master
       with:
         args: functions deploy ${{secrets.CF_NAME}} --project=${{secrets.CF_PROJECT}} --region=${{secrets.CF_REGION}}
