--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -7,12 +7,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
-    - name: Build and test
-      uses: cedrickring/golang-action/go1.11@master
-      env:
-        GO111MODULE: "on"
+    - name: Install Go
+      uses: actions/setup-go@v1
       with:
-        args: go test -verbose -race -cover -covermode=atomic ./...
+        go-version: '1.11'
+    - name: go test
+      env:
+        GO111MODULE: 'on'
+      run: go test --verbose -race -cover -covermode=atomic ./...
   deploy:
     name: Deploy
     if: github.ref == 'refs/heads/master' && !github.event.deleted
