Use autoreadme instead of godocdown

--- a/README.md.template
+++ b/README.md.template
@@ -3,4 +3,9 @@
 [![Go Report Card](https://goreportcard.com/badge/github.com/reload/dnsimple-dk-hostmaster-ds-upload)](https://goreportcard.com/report/github.com/reload/dnsimple-dk-hostmaster-ds-upload)
 [![GoDoc](https://godoc.org/github.com/reload/dnsimple-dk-hostmaster-ds-upload?status.svg)](https://godoc.org/github.com/reload/dnsimple-dk-hostmaster-ds-upload)
 
-{{ .EmitSynopsis }}
+{{ .Doc }}
+
+{{if .Bugs}}
+## Bugs
+{{range .Bugs}}* {{.}}{{end}}
+{{end}}
