--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -22,13 +22,10 @@ jobs:
     needs: build_and_test
     steps:
     - uses: actions/checkout@master
-    - name: Authenticate to Google Cloud
-      uses: actions/gcloud/auth@master
-      env:
-        GCLOUD_AUTH: ${{ secrets.GCLOUD_AUTH }}
-    - name: Deploy to Google Cloud Functions
-      uses: actions/gcloud/cli@master
+    - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
       with:
-        args: functions deploy ${{secrets.CF_NAME}} --project=${{secrets.CF_PROJECT}} --region=${{secrets.CF_REGION}}
+        version: '275.0.0'
+        service_account_key: ${{ secrets.GCLOUD_AUTH }}
+    - run: gcloud functions deploy ${{secrets.CF_NAME}} --project=${{secrets.CF_PROJECT}} --region=${{secrets.CF_REGION}}
           --entry-point=Handle --runtime=go111 --trigger-http --memory=128M
           --format='yaml(status,updateTime,versionId)'
