--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,31 +1,20 @@
 on: push
-name: Build and Deploy
+name: Build and test
 jobs:
   build_and_test:
     name: Build and test
-    if: '!github.event.deleted'
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
+    - uses: actions/checkout@v2
+    - uses: arnested/go-version-action@v1
+      id: go-version
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Install Go
-      uses: actions/setup-go@v2.1.3
+      uses: actions/setup-go@v2
       with:
-        go-version: '1.13'
+        go-version: ${{ steps.go-version.outputs.minimal }}
     - name: go test
       env:
         GO111MODULE: 'on'
       run: go test --verbose -race -cover -covermode=atomic ./...
-  deploy:
-    name: Deploy
-    if: github.ref == 'refs/heads/master' && !github.event.deleted
-    runs-on: ubuntu-latest
-    needs: build_and_test
-    steps:
-    - uses: actions/checkout@master
-    - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
-      with:
-        version: '275.0.0'
-        service_account_key: ${{ secrets.GCLOUD_AUTH }}
-    - run: gcloud functions deploy ${{secrets.CF_NAME}} --project=${{secrets.CF_PROJECT}} --region=${{secrets.CF_REGION}}
-          --entry-point=Handle --runtime=go113 --trigger-http --memory=128M
-          --format='yaml(status,updateTime,versionId)'
