--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,5 +22,5 @@ jobs:
       if: ${{ always() }}
       uses: containrrr/shoutrrr-action@v1
       with:
-        url: ${{ secrets.ZULIP_SHOUTRRR_URL }}?stream=logs%topic=dnssec
-        message: 'Deployed ${{ github.repository }}@${{ github.sha }} to Google Cloud Function ${{ secrets.CF_NAME }}@${{ secrets.CF_PROJECT }}: ${{ job.status }}.'
+        url: "${{ secrets.ZULIP_SHOUTRRR_URL }}?stream=logs%topic=dnssec"
+        message: "Deployed ${{ github.repository }}@${{ github.sha }} to Google Cloud Functions: ${{ job.status }}."
