--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,5 +22,5 @@ jobs:
       if: ${{ always() }}
       uses: containrrr/shoutrrr-action@v1
       with:
-        url: "${{ secrets.ZULIP_SHOUTRRR_URL }}?stream=logs%topic=dnssec"
+        url: "zulip://github-actions-bot%40reload.zulipchat.com:${{ secrets.ZULIP_TOKEN }}@reload.zulipchat.com?stream=logs%topic=dnssec"
         message: "Deployed ${{ github.repository }}@${{ github.sha }} to Google Cloud Functions: ${{ job.status }}."
