Format Zulip message for increased readability

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,4 +23,4 @@ jobs:
       uses: containrrr/shoutrrr-action@v1
       with:
         url: "${{ secrets.ZULIP_SHOUTRRR_URL }}?stream=logs&topic=dnssec"
-        message: "Deployed ${{ github.repository }}@${{ github.sha }} to Google Cloud Function ${{ secrets.CF_NAME }}@${{ secrets.CF_PROJECT }}: ${{ job.status }}."
+        message: "Deployed `${{ github.repository }}`@`${{ github.sha }}` to Google Cloud Function `${{ secrets.CF_NAME }}`@`${{ secrets.CF_PROJECT }}`: **${{ job.status }}**."
