--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -9,6 +9,12 @@ on:
   schedule:
     - cron: '0 19 * * 5'
 
+permissions:
+  contents: read
+  actions: read
+  pull-requests: read
+  security-events: write
+
 jobs:
   analyse:
     name: Analyse
