--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,5 +1,9 @@
 on: push
 name: Build and test
+
+permissions:
+  contents: read
+
 jobs:
   build_and_test:
     name: Build and test
@@ -7,11 +11,12 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - uses: arnested/go-version-action@v1
-      id: go-version
-    - name: Install Go
-      uses: actions/setup-go@v3
+      id: version
+    - name: Setup Go ${{ steps.version.outputs.go-mod-version }}.x
+      uses: WillAbides/setup-go-faster@v1.7.0
       with:
-        go-version: ${{ steps.go-version.outputs.minimal }}
+        go-version: ${{ steps.version.outputs.go-mod-version }}.x
+        ignore-local: true
     - name: go test
       env:
         GO111MODULE: 'on'
