--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,11 +6,18 @@ on:
     types:
       - completed
 
+permissions:
+  contents: read
+
 jobs:
   release:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+    - uses: arnested/go-version-action@v1
+      id: version
+    - run: echo ::set-output name=go-runtime::$(echo -n go${{ steps.version.outputs.go-mod-version }} | tr -d '.')
+      id: runtime
     - uses: google-github-actions/auth@v0
       with:
         credentials_json: '${{ secrets.GCLOUD_AUTH }}'
@@ -19,7 +26,7 @@ jobs:
         name: ${{ secrets.CF_NAME }}
         region: ${{ secrets.CF_REGION }}
         project_id: ${{ secrets.CF_PROJECT }}
-        runtime: go116
+        runtime: ${{ steps.runtime.outputs.go-runtime }}
         entry_point: "Handle"
         env_vars: 247964_DOMAIN=${{ secrets.X_247964_DOMAIN }},247964_PASSWORD=${{ secrets.X_247964_PASSWORD }},247964_USERID=${{ secrets.X_247964_USERID }},TOKEN=${{ secrets.TOKEN }},DNSIMPLE_TOKEN=${{ secrets.DNSIMPLE_TOKEN }},NOTIFY=${{ secrets.NOTIFY }}
     - name: Post status to Zulip
