--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,6 +29,9 @@ jobs:
         runtime: ${{ steps.runtime.outputs.go-runtime }}
         entry_point: "Handle"
         env_vars: 247964_DOMAIN=${{ secrets.X_247964_DOMAIN }},247964_PASSWORD=${{ secrets.X_247964_PASSWORD }},247964_USERID=${{ secrets.X_247964_USERID }},TOKEN=${{ secrets.TOKEN }},DNSIMPLE_TOKEN=${{ secrets.DNSIMPLE_TOKEN }},NOTIFY=${{ secrets.NOTIFY }}
+        description: ${{ github.repository }}
+        https_trigger_security_level: secure_always
+        memory_mb: 128
     - name: Post status to Zulip
       if: ${{ always() }}
       uses: containrrr/shoutrrr-action@v1
