Changed DK Hostmaster to Punktum.dk
DK Hostmaster has changed their name to Punktum.dk.

--- a/README.md.template
+++ b/README.md.template
@@ -1,4 +1,4 @@
-# DNSimple DK Hostmaster DS upload
+# DNSimple Punktum DS upload
 
 [![GoDoc](https://godoc.org/github.com/reload/dnsimple-dk-hostmaster-ds-upload?status.svg)](https://godoc.org/github.com/reload/dnsimple-dk-hostmaster-ds-upload)
 
